--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -6,6 +6,11 @@
 <body>
 	<div id="page-container">
 		<h1 id="page-title">Nightlife Coordination App</h1>
+		<br>
+		<form id="location-search" action="/search" method="post">
+			<input id="location" type="text">
+			<input type="submit" value="Search">
+		</form>
 	</div>
 </body>
 </html>
