Search Yelp API by value in Location search box

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -8,7 +8,7 @@
 		<h1 id="page-title">Nightlife Coordination App</h1>
 		<br>
 		<form id="location-search" action="/search" method="post">
-			<input id="location" type="text">
+			<input id="location" name="searchLocation" type="text">
 			<input type="submit" value="Search">
 		</form>
 	</div>
