Fix passport Twitter auth

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -7,6 +7,10 @@
 	<div id="page-container">
 		<h1 id="page-title">Nightlife Coordination App</h1>
 		<br>
+		<form action="/auth/twitter" method="get">
+		    <input type="submit" value="Login with Twitter">
+		</form>
+		<br>
 		<form id="location-search" action="/search" method="post">
 			<input id="location" name="searchLocation" type="text">
 			<input type="submit" value="Search">
