Replate auth with Google

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -7,8 +7,8 @@
 	<div id="page-container">
 		<h1 id="page-title">Nightlife Coordination App</h1>
 		<br>
-		<form action="/auth/twitter" method="get">
-		    <input type="submit" value="Login with Twitter">
+		<form action="/auth/google" method="get">
+		    <input type="submit" value="Login with Google">
 		</form>
 		<br>
 		<form id="location-search" action="/search" method="post">
