Hide login button and show greetings to logged in users

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -7,6 +7,15 @@ body {
 	text-align: center;
 }
 
+#user-welcome {
+	text-align: center;
+}
+
+#google-login {
+	text-align: center;
+	margin: auto;
+}
+
 #location-search {
 	text-align: center;
 }
