Create title for reults list

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -3,11 +3,7 @@ body {
 	color: white;
 }
 
-#page-title {
-	text-align: center;
-}
-
-#user-welcome {
+#page-title, #user-welcome, #results-title {
 	text-align: center;
 }
 
