--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -28,7 +28,9 @@
 		<div id="results-list">
 			<% if(searchResults) { %>
 				<% for(var i=0; i < searchResults.length; i++) { %>
-					<p><%= searchResults[i].name %></p>
+					<img id="result-image" src="<%= searchResults[i].image_url %>">
+					<p id="result-name"><%= searchResults[i].name %></p>
+					<p id="going-counter">0 Going</p>
 					<br>
 				<% } %>
 			<% } %>
