--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -28,13 +28,16 @@
 		<div id="results-list">
 			<% if(searchResults) { %>
 				<% for(var i=0; i < searchResults.length; i++) { %>
-					<form action="/toggleUserGoing" method="get">
+					<form action="/toggleUserGoing" method="post">
 						<div id="result">
 							<img id="result-image" src="<%= searchResults[i].image_url %>">
 							<p id="result-name"><%= searchResults[i].name %></p>
 							<p id="going-counter">0 Going</p>
 						</div>
-						<input type="submit" value="I'm Going!">
+						<input type="hidden" name="locationId" value="<%= searchResults[i].id %>">
+						<% if(user) { %>
+							<input type="submit" value="I'm Going!">
+						<% } %>
 					</form>
 					<hr>
 					<br>
