--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -37,7 +37,9 @@
 							</p>
 						</div>
 						<input type="hidden" name="locationId" value="<%= searchResults[i].id %>">
-						<% if(user) { %>
+						<% if(userGoing[i]) { %>
+							<p>YOU ARE GOING!</p>
+						<% } else if(user) { %>
 							<input type="submit" value="I'm Going!">
 						<% } %>
 					</form>
